--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Crypto Inf</string>
+    <string name="app_name">Crypto ?</string>
     <string name="coinimage">coinImage</string>
 </resources>
